--- a/main.kv
+++ b/main.kv
@@ -683,7 +683,7 @@
             row_default_height: 300
             ImageButton:
                 id: figure1
-                source: "figure1.png"
+                source: ""
                 canvas.before:
                     Color:
                         rgba: 0, 0, 0, 0
@@ -692,7 +692,7 @@
                         pos: self.pos
             ImageButton:
                 id: figure2
-                source: "figure1.png"
+                source: ""
                 canvas.before:
                     Color:
                         rgba: 0, 0, 0, 0
@@ -701,7 +701,7 @@
                         pos: self.pos
             ImageButton:
                 id: figure3
-                source: "figure1.png"
+                source: ""
                 canvas.before:
                     Color:
                         rgba: 0, 0, 0, 0
@@ -710,7 +710,7 @@
                         pos: self.pos
             ImageButton:
                 id: figure4
-                source: "figure1.png"
+                source: ""
                 canvas.before:
                     Color:
                         rgba: 0, 0, 0, 0
