--- a/main.kv
+++ b/main.kv
@@ -218,6 +218,8 @@
             font_size: 30
             height: dp(40)
             pos_hint: {"center_x": .5, "center_y": .5}
+            on_press:
+                app.open_excel()
 
 
         MDFillRoundFlatButton:
@@ -727,6 +729,8 @@
                     font_name: 'THSarabun Bold.ttf'
                     font_size: 20
                     height: dp(40)
+                    on_press:
+                        app.open_excel()
 
                 Label:
                 MDFillRoundFlatButton:
