--- a/main.kv
+++ b/main.kv
@@ -243,370 +243,370 @@
         GridLayout:
             size_hint_y: None
             height: self.minimum_height
-            row_default_height: 20
+            row_default_height: 30
             cols:1
-            spacing: 15
-            padding: 36
+            padding : '20dp'
+            spacing : '25dp'
             Label:
             Label:
             MDLabel:
                 text: "ความเข้มข้นของสารทดลองมาตรฐานตัวที่ 1"
                 font_name: 'THSarabun Bold.ttf'
-                font_size: 20
+                font_size: 50
 
             GridLayout:
                 cols:11
                 MDLabel:
                     text: "1"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem1_1
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "2"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem1_2
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "3"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem1_3
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "4"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem1_4
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
             Label:
             GridLayout:
                 cols:11
                 MDLabel:
                     text: "5"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem1_5
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "6"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem1_6
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "7"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem1_7
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "8"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem1_8
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
 
             Label:
             Label:
             MDLabel:
                 text: "ความเข้มข้นของสารทดลองมาตรฐานตัวที่ 2"
                 font_name: 'THSarabun Bold.ttf'
-                font_size: 20
+                font_size: 50
             GridLayout:
                 cols:11
                 MDLabel:
                     text: "1"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem2_1
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "2"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem2_2
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "3"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem2_3
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "4"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem2_4
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
             Label:
             GridLayout:
                 cols:11
                 MDLabel:
                     text: "5"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem2_5
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "6"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem2_6
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "7"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem2_7
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "8"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem2_8
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
 
             Label:
             Label:
             MDLabel:
                 text: "ความเข้มข้นของสารทดลองมาตรฐานตัวที่ 3"
                 font_name: 'THSarabun Bold.ttf'
-                font_size: 20
+                font_size: 50
             GridLayout:
                 cols:11
                 MDLabel:
                     text: "1"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem3_1
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "2"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem3_2
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "3"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem3_3
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "4"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem3_4
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
             Label:
             GridLayout:
                 cols:11
                 MDLabel:
                     text: "5"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem3_5
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "6"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem3_6
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "7"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem3_7
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "8"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem3_8
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
 
             Label:
             Label:
             MDLabel:
                 text: "ความเข้มข้นของสารทดลองมาตรฐานตัวที่ 4"
                 font_name: 'THSarabun Bold.ttf'
-                font_size: 20
+                font_size: 50
             GridLayout:
                 cols:11
                 MDLabel:
                     text: "1"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem4_1
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "2"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem4_2
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "3"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem4_3
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "4"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem4_4
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
             Label:
             GridLayout:
                 cols:11
                 MDLabel:
                     text: "5"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem4_5
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "6"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem4_6
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "7"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem4_7
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 Label:
                 MDLabel:
                     text: "8"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDTextField:
                     id: chem4_8
                     mode: 'rectangle'
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
 
             Label:
             Label:
@@ -617,7 +617,7 @@
                 MDLabel:
                     text: "R^2 สีแดง"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDCheckbox:
                     id: red
                     size_hint: None, None
@@ -632,7 +632,7 @@
                 MDLabel:
                     text: "R^2 สีเขียว"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDCheckbox:
                     id: green
                     size_hint: None, None
@@ -647,7 +647,7 @@
                 MDLabel:
                     text: "R^2 สีน้ำเงิน"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 50
                 MDCheckbox:
                     id: blue
                     size_hint: None, None
@@ -661,7 +661,7 @@
                 MDFillRoundFlatButton:
                     text: "คำนวณหาความสัมพันธ์"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 30
                     height: dp(40)
                     pos_hint: {"center_x": .5, "center_y": .13}
                     on_press:
@@ -727,7 +727,7 @@
                 MDFillRoundFlatButton:
                     text: "แสดงไฟล์เอกซ์เซล"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 30
                     height: dp(40)
                     on_press:
                         app.open_excel()
@@ -736,7 +736,7 @@
                 MDFillRoundFlatButton:
                     text: "กลับหน้าแรก"
                     font_name: 'THSarabun Bold.ttf'
-                    font_size: 20
+                    font_size: 30
                     height: dp(40)
                     on_press:
                         root.manager.current = 'home'
